fix: hide globs correctly behind overflow

--- a/components/nav.css
+++ b/components/nav.css
@@ -23,6 +23,7 @@ nav.settings {
 nav.home {
     position: fixed;
     backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
 }
 
 [data-theme="light"] nav.home {
