--- a/pages/holding/landing.css
+++ b/pages/holding/landing.css
@@ -2,6 +2,12 @@ body {
     overflow-x: hidden;
 }
 
+.content {
+    overflow: hidden;
+    margin-bottom: -52rem;
+    padding-bottom: 52rem;
+}
+
 .content>* {
     z-index: 2;
 }
