--- a/pages/shared/footer.css
+++ b/pages/shared/footer.css
@@ -1,3 +1,7 @@
+.footer-space {
+    overflow: hidden;
+}
+
 .footer {
     --spacing: 4rem;
     position: relative;
